Bug 11817 - Fix rsyncd.conf gid field parsing: allow spaces within them and improve delimiter logic
Summary: Fix rsyncd.conf gid field parsing: allow spaces within them and improve delim...
Status: RESOLVED FIXED
Alias: None
Product: rsync (new bug reports go to github)
Classification: Unclassified
Component: core (show other bugs)
Version: 3.1.2
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Wayne Davison
QA Contact: Rsync QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-31 00:04 UTC by Suraj Ravichandran
Modified: 2016-04-17 22:59 UTC (History)
0 users

See Also:


Attachments
Patch to allow spaces within group names in rsyncd.conf (3.73 KB, text/plain)
2016-03-31 00:04 UTC, Suraj Ravichandran
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description Suraj Ravichandran 2016-03-31 00:04:55 UTC
Created attachment 11952 [details]
Patch to allow spaces within group names in rsyncd.conf

We (at FreeNAS) encountered this bug when one of our users filed this bug: https://bugs.freenas.org/issues/7950

The gist of the bug is that the user has a group named: " DOMAIN\domain admins" in his rsync module group which irks the conf file.

Initially I just made the patch and added it to our local copy of the freebsd ports tree used in our builds, however that is difficult to maintain and thus I wish to submit that very same patch upstream (i.e. to you guys).

My C is not very good and thus if you find any suboptimal code in my patch, I apologize in advance and request you to improve on it in ways you find fit.

Either ways it would be very nice to have this work properly.

Please go though path (see attached), I have tested it against the master branch of the samba rsync git repo: "git://git.samba.org/rsync.git" and can also submit my commit of that as a push request if there is a way to do that (see this commit in our local copy of your rsync git repo: https://github.com/freenas/rsync/commit/a59bd239b92dcae984c9a9579fc0cee7ec5ffa75
Comment 1 Wayne Davison 2016-04-17 22:59:04 UTC
I've committed a different change that leaves the default comma & whitespace parsing unchanged but allows the user to request comma-only splitting by starting the list with a comma (see commit 9a12959ab6017a859fe8cd90ae2043b62a85b306).