Move rsync port to local nas_ports and add back custom patch for proper group name parsing in rsyncd.conf

Have submitted patch upstream to samba (see bug: https://bugzilla.samba.org/show_bug.cgi?id=11817)

Ticket: #7950